# psychic-ninja

./: .gitignore  CMakeLists.txt  README.md
cmake/: sysconf.h.cmake  systemfuncs.cmake
include/socket/: socket.h
src/: main.c
src/socket/: socket.c
src/vector/: vec.c
